# wordle

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/: idioms.txt  idiomsp.txt  word5p.txt
src/components/basic_wordle_components/: basic_wordle_components.cpp  basic_wordle_components.hpp
src/components/basic_wordle_gui_components/: basic_wordle_qt_button.cpp  basic_wordle_qt_button.hpp  basic_wordle_qt_button_grid.cpp  basic_wordle_qt_button_grid.hpp  basic_wordle_qt_button_group.cpp  basic_wordle_qt_button_group.hpp
src/components/colored_basic_wordle_components/: colored_basic_wordle.cpp  colored_basic_wordle.hpp
src/components/handle_components/: handle_components.cpp  handle_components.hpp
src/concepts/: concepts.hpp
src/examples/basic_cli_example/: basic_cli_example.cpp
src/examples/basic_gui_example/: basic_gui_example.cpp
src/examples/colored_cli_example/: colored_cli_example.cpp
src/examples/handle_cli_example/: handle_cli_example.cpp
src/exceptions/: bad_resource_exceptions.hpp  base_exceptions.hpp  exceptions.hpp  no_such_method_exceptions.hpp
src/game_frameworks/qt_cli_single_game_framework/: qt_cli_game_framework.hpp
src/game_frameworks/qt_gui_single_game_framework/: qt_gui_game_framework.cpp  qt_gui_game_framework.hpp
src/guards/: CMakeLists.txt  qt_guards.hpp
src/guards/qobj_concepts/: qobj_concepts.hpp
src/includes/: concepts.h++  interfaces.h++  tools.h++  utilities.h++
src/includes/components/: basic_wordle.h++  colored_wordle.h++  handle.h++  qt_gui.h++
src/includes/game_frameworks/: qt_cli_single_game_framework.h++  qt_gui_single_game_framework.h++
src/includes/single_games/: qt_cli_single_wordle_template.h++  qt_gui_single_wordle.h++
src/interfaces/: qt_gui_interfaces.hpp  wordle_interfaces.hpp
src/legacy/: wordle.cpp  wordle.hpp  wordle_interface.hpp
src/protocols/basic_protocol/: basic_protocal.hpp
src/single_games/qt_cli_single_wordle/: qt_cli_single_wordle_template.hpp
src/single_games/qt_gui_single_wordle/qt_gui_single_basic_wordle/: qt_basic_gui_game.cpp  qt_basic_gui_game.hpp
src/tools/: commands.hpp  comparators.hpp  generators.hpp  marks.hpp  tools.hpp
src/utilities/: debug_utilities.hpp  io_device.hpp  macros.hpp  result_type.hpp  stringizer.hpp  utilities.hpp
src/utilities/colored_cli/: CMakeLists.txt  colored_cli.cpp  colored_cli.hpp
src/utilities/macros/: macro_auto_generate.hpp  macro_auto_generate_predefined.hpp  macro_switch.hpp  macro_utilities.hpp
test/components_test/cli_components/: test_basic_wordle.cpp  test_handle.cpp
test/components_test/gui_components/: test_basic_wordle_qt_button.cpp
test/concepts_test/: basic_wordle_test.cpp
test/test_bases/: test_utilities.hpp
test/utilities_test/: utilities_colored_cli_test.cpp  utilities_commands_test.cpp  utilities_macros_test.cpp  utilities_marks_test.cpp
